# LaserGameHU

./: .gitignore  LICENSE  README.md  ScrumLogbook.md  TeamContract.md  sdkconfig  sdkconfig - bk  sdkconfig - original  sdkconfig copy.old  sdkconfig.ci  sdkconfig.old
Diagrams/: .$OD_Player.drawio.bkp  .$OD_Player.drawio.dtmp  OD_Player.drawio
Diagrams/Drawio/: .$AD_GameLeader_UC04.drawio.bkp  .$AD_GameLeader_UC051.drawio.bkp  .$AD_GameLeader_UC052.drawio.bkp  .$AD_Player_UC01.drawio.bkp  .$AD_Player_UC02.drawio.bkp  .$AD_Player_UC03.drawio.bkp  .$CD_MessageSender.drawio.bkp  .$OD_GameLeader.drawio.bkp  .$OD_GameLeader.drawio.dtmp  .$OD_Player.drawio.bkp  .$STD_GameStateControl.drawio.bkp  .$STD_GameStateControl.drawio.dtmp  .$STD_ReadyUpControl.drawio.bkp  .$STD_ReceivingHitControl.drawio.bkp  .$STD_ReceivingHitControl.drawio.dtmp  .$STD_ShootingControl.drawio.bkp  .$STD_ShootingControl.drawio.dtmp  .$STD_messageReceiver.drawio.dtmp  .$STD_messageSender.drawio.bkp  .$UCD_GameLeader.drawio.bkp  .$UCD_GameLeader.drawio.dtmp  .$UCD_Player.drawio.bkp  AD_GameLeader_UC04.drawio  CD_MessageSender.drawio  OD_GameLeader.drawio  OD_Player.drawio  STD_GameStateControl.drawio  STD_ReceivingHitControl.drawio  STD_messageReceiver.drawio  STD_messageSender.drawio  UCD_GameLeader.drawio
Diagrams/STD_Diagrammen/: STD_DisplayControl.drawio  STD_GameTimerControl.drawio  STD_ReceivingHitControl.drawio  STD_SpeakerControl.drawio
apps/kattenvoermachine/Dispenser/tests/: CMakeLists.txt  crt_test_testDispenser.h  main.cpp
components/: Readme.md
diagrammen/: .$GameState.drawio.bkp  .$Hit.drawio.bkp  .$STD_SpeakerControl.drawio.bkp  .$Shooting.drawio.bkp  .$Shooting.drawio.dtmp  AD_ReceivePostGameData.drawio  CD_GameLeader.drawio  RecievingHits.drawio  STD_DisplayControl.drawio  STD_player_UC043_ReceivingHitControl.drawio  Use case diagrams.docx  std_displayDriver.drawio  taakstructuur.md
main/: CMakeLists.txt  idf_component.yml  main.cpp  necReciever.hpp  signalPauseDetector.hpp
(+246 files in other folders)
