idf_component_register(
SRCS 
 "./main.cpp" "crt/crt_FromArduinoIDE.cpp"
 "libs/hx711/src/HX711.cpp" 
 "libs/servo/src/ESP32PWM.cpp"
 "libs/servo/src/ESP32Servo.cpp"

"aide/cores/esp32/esp32-hal-adc.c"
"aide/cores/esp32/esp32-hal-bt.c"
"aide/cores/esp32/esp32-hal-cpu.c"
"aide/cores/esp32/esp32-hal-dac.c"
"aide/cores/esp32/esp32-hal-gpio.c"
"aide/cores/esp32/esp32-hal-i2c.c"
"aide/cores/esp32/esp32-hal-i2c-slave.c"
"aide/cores/esp32/esp32-hal-ledc.c"
"aide/cores/esp32/esp32-hal-matrix.c"
"aide/cores/esp32/esp32-hal-misc.c"
"aide/cores/esp32/esp32-hal-psram.c"
"aide/cores/esp32/esp32-hal-rmt.c"
"aide/cores/esp32/esp32-hal-sigmadelta.c"
"aide/cores/esp32/esp32-hal-spi.c"
"aide/cores/esp32/esp32-hal-time.c"
"aide/cores/esp32/esp32-hal-timer.c"
"aide/cores/esp32/esp32-hal-tinyusb.c"
"aide/cores/esp32/esp32-hal-touch.c"
"aide/cores/esp32/esp32-hal-uart.c"
"aide/cores/esp32/firmware_msc_fat.c"
"aide/cores/esp32/FirmwareMSC.cpp"
"aide/cores/esp32/FunctionalInterrupt.cpp"
"aide/cores/esp32/HardwareSerial.cpp"
"aide/cores/esp32/HWCDC.cpp"
"aide/cores/esp32/IPAddress.cpp"
"aide/cores/esp32/IPv6Address.cpp"
"aide/cores/esp32/main.cpp"
"aide/cores/esp32/MD5Builder.cpp"
"aide/cores/esp32/Print.cpp"
"aide/cores/esp32/stdlib_noniso.c"
"aide/cores/esp32/Stream.cpp"
"aide/cores/esp32/StreamString.cpp"
"aide/cores/esp32/USB.cpp"
"aide/cores/esp32/USBCDC.cpp"
"aide/cores/esp32/USBMSC.cpp"
"aide/cores/esp32/wiring_pulse.c"
"aide/cores/esp32/wiring_shift.c"
"aide/cores/esp32/WMath.cpp"
"aide/cores/esp32/WString.cpp"
"aide/cores/esp32/libb64/cdecode.c"
"aide/cores/esp32/libb64/cencode.c"

INCLUDE_DIRS 
"." "crt" "libs/hx711/src" "libs/servo/src"
"../apps/kattenvoermachine/Dispenser"
"../apps/kattenvoermachine/Dispenser/tests"

"aide/variants/mav_wroom32_devkit"
"aide/cores/esp32"
"aide/cores/esp32/libb64"
"aide/cores/esp32/apps/sntp"
)
